--- a/frontend/shared/components/package.json
+++ b/frontend/shared/components/package.json
@@ -4,10 +4,7 @@
     "private": true,
     "main": "index.ts",
     "type": "module",
-    "sideEffects": [
-        "*.vue",
-        "*.css"
-    ],
+    "sideEffects": false,
     "dependencies": {
         "@tiptap/extension-image": "^2.4.0",
         "@tiptap/extension-link": "^2.4.0",
