--- a/frontend/shared/excel-export/package.json
+++ b/frontend/shared/excel-export/package.json
@@ -4,10 +4,7 @@
     "private": true,
     "main": "index.ts",
     "type": "module",
-    "sideEffects": [
-        "*.vue",
-        "*.css"
-    ],
+    "sideEffects": false,
     "dependencies": {
         "@stamhoofd/structures": "*",
         "@stamhoofd/components": "*"
