--- a/package.json
+++ b/package.json
@@ -53,7 +53,7 @@
     "@simonbackx/simple-encoding": "2.22.0",
     "@simonbackx/simple-errors": "^1.5.0",
     "@simonbackx/simple-networking": "1.20.0",
-    "@simonbackx/vue-app-navigation": "2.12.1",
+    "@simonbackx/vue-app-navigation": "2.13.0",
     "@zxcvbn-ts/core": "^0.3.0",
     "@zxcvbn-ts/language-common": "^0.1.2",
     "@zxcvbn-ts/language-nl-be": "^0.3.0",
@@ -98,10 +98,13 @@
     "jest-console-group-reporter": "^1.1.1",
     "jest-extended": "4.0.2",
     "lerna": "^8.2.3",
+    "lightningcss": "^1.30.1",
     "maildev": "^2.2.1",
     "nodemon": "^3.1.0",
     "playwright": "^1.51.0",
+    "postcss-discard-duplicates": "^7.0.2",
     "sass": "^1.45.1",
+    "terser": "^5.43.1",
     "ts-jest": "^29.1.2",
     "ts-node": "^10.9.1",
     "typescript": "^5.6.2",
