--- a/frontend/shared/components/package.json
+++ b/frontend/shared/components/package.json
@@ -6,15 +6,13 @@
     "type": "module",
     "sideEffects": false,
     "dependencies": {
-        "@tiptap/extension-image": "^2.4.0",
-        "@tiptap/extension-link": "^2.4.0",
-        "@tiptap/extension-typography": "^2.4.0",
-        "@tiptap/extension-underline": "^2.4.0",
-        "@tiptap/extension-placeholder": "^2.4.0",
-        "@tiptap/pm": "^2.4.0",
-        "@tiptap/starter-kit":"^2.4.0",
-        "@tiptap/vue-3": "^2.4.0",
-        "ibantools": "^3.1.0",
-        "@stamhoofd/structures": "*"
+        "@stamhoofd/structures": "*",
+        "@tiptap/extension-image": "^3.4.2",
+        "@tiptap/extension-placeholder": "^3.4.2",
+        "@tiptap/extension-typography": "^3.4.2",
+        "@tiptap/pm": "^3.4.2",
+        "@tiptap/starter-kit": "^3.4.2",
+        "@tiptap/vue-3": "^3.4.2",
+        "ibantools": "^3.1.0"
     }
 }
