--- a/frontend/app/dashboard/package.json
+++ b/frontend/app/dashboard/package.json
@@ -14,6 +14,7 @@
         "@stamhoofd/assets": "1.0.0",
         "@stamhoofd/components": "1.0.0",
         "@stamhoofd/scss": "1.0.0",
+        "posthog-js": "^1.268.4",
         "qr-scanner": "^1.3.0"
     },
     "devDependencies": {
