--- a/frontend/app/mobile/package.json
+++ b/frontend/app/mobile/package.json
@@ -12,25 +12,25 @@
     "build:production": "NODE_OPTIONS=\"--max-old-space-size=8192\" NODE_ENV=production webpack --performance-hints warning"
   },
   "dependencies": {
-    "@capacitor/android": "5.7.0",
-    "@capacitor/app": "5.0.7",
-    "@capacitor/app-launcher": "5.0.7",
-    "@capacitor/cli": "^5.4.1",
-    "@capacitor/core": "^5.7.0",
-    "@capacitor/filesystem": "5.1.4",
-    "@capacitor/haptics": "5.0.7",
-    "@capacitor/ios": "^5.7.0",
-    "@capacitor/keyboard": "5.0.7",
-    "@capacitor/preferences": "5.0.7",
-    "@capacitor/share": "5.0.7",
-    "@capacitor/status-bar": "5.0.7",
-    "@capgo/capacitor-updater": "5.3.57",
+    "@capacitor/android": "^6.0.0",
+    "@capacitor/app": "^6.0.0",
+    "@capacitor/app-launcher": "^6.0.0",
+    "@capacitor/cli": "^6.0.0",
+    "@capacitor/core": "^6.0.0",
+    "@capacitor/filesystem": "^6.0.0",
+    "@capacitor/haptics": "^6.0.0",
+    "@capacitor/ios": "^6.0.0",
+    "@capacitor/keyboard": "^6.0.0",
+    "@capacitor/preferences": "^6.0.0",
+    "@capacitor/share": "^6.0.0",
+    "@capacitor/status-bar": "^6.0.0",
+    "@capgo/capacitor-updater": "6.14.0",
     "@stamhoofd/assets": "1.0.0",
     "@stamhoofd/components": "1.0.0",
     "@stamhoofd/scss": "1.0.0",
     "capacitor-rate-app": "4.0.3"
   },
   "devDependencies": {
-    "@capacitor/cli": "5.7.0"
+    "@capacitor/cli": "^6.0.0"
   }
 }
